<resources    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Jota Text Editor</string>
    <string name="app_name_debug">_Jota Text Editor</string>
    <string name="hint_message">- - Jota Text Editor - -</string>
    <string name="selectAll">Select all</string>
    <string name="selectText">Select text</string>
    <string name="stopSelectingText">Stop selecting text</string>
    <string name="cut">Cut</string>
    <string name="cutAll">Cut all</string>
    <string name="copy">Copy</string>
    <string name="copyAll">Copy all</string>
    <string name="paste">Paste</string>
    <string name="copyUrl">Copy URL</string>
    <string name="inputMethod">Input method</string>
    <string name="editTextMenuTitle">Edit text</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_message">%s is updated. Do you want to save this file?</string>
    <string name="confirmation_message_null">This text is updated. Do you want to save?</string>
    <string name="menu_file">File</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_insert">Insert</string>
    <string name="menu_search">Search</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_help">Help</string>
    <string name="menu_direct">Direct Intent</string>
    <string name="menu_file_new">New</string>
    <string name="menu_file_open">Open...</string>
    <string name="menu_file_history">History</string>
    <string name="menu_file_save">Save</string>
    <string name="menu_file_saveas">Save As...</string>
    <string name="menu_file_charcode">Character Code...</string>
    <string name="menu_file_lbcode">Line Break...</string>
    <string name="menu_file_quit">Quit</string>
    <string name="menu_file_view">Open by Application</string>
    <string name="menu_edit_undo">Undo</string>
    <string name="menu_search_byintent">Search by Application</string>
    <string name="menu_share">Share</string>
    <string name="fs_title_open">Open</string>
    <string name="fs_title_save">Save as</string>
    <string name="fs_title_dir">Select Directory</string>
    <string name="fs_access_denied">Access denied...</string>
    <string name="history">Recent files...</string>
    <string name="charset">Character code</string>
    <string name="linebreak">Line break code</string>
    <string name="search_word">Search Word</string>
    <string name="activity_picker_label">Select activity</string>
    <string name="button_replace">Replace</string>
    <string name="button_replace_all">All</string>
    <string name="button_skip">Skip</string>
    <string name="about_url">file:///android_asset/about.html</string>
    <string name="about_title">About Jota Text Editor</string>
    <string name="help_url">http://sites.google.com/site/aquamarinepandora/home/jota-text-editor</string>
    <string name="no_reciever_url">http://sites.google.com/site/aquamarinepandora/home/jota-text-editor/extension</string>
    <string name="spinner_message">Wait a while...</string>
    <string name="label_view">View</string>
    <string name="label_font">Font</string>
    <string name="label_font_size">Font Size</string>
    <string name="label_font_type">Font Type</string>
    <string name="label_font_type_normal">Normal</string>
    <string name="label_font_type_monospace">Monospace</string>
    <string name="label_font_type_external">External</string>
    <string name="label_text_color">Text Color</string>
    <string name="label_highlight_color">Highlight Color</string>
    <string name="label_underline_color">Underline Color</string>
    <string name="label_underline">Show Underline</string>
    <string name="label_theme">Background Color</string>
    <string name="label_background_white">White</string>
    <string name="label_background_black">Black</string>
    <string name="label_search">Search</string>
    <string name="label_re">Regular Expression</string>
    <string name="label_ignore_case">Ignore Case</string>
    <string name="label_init">Set default</string>
    <string name="label_help">Help</string>
    <string name="label_mail">Mail to developer</string>
    <string name="label_mail_summary">pandora@aquamarine.sakura.ne.jp</string>
    <string name="label_tweet">Tweet to developer</string>
    <string name="label_tweet_summary">\@jiro_aqua</string>
    <string name="tweet_url">http://twitter.com/home?status=\@jiro_aqua%20%23JotaTextEditor</string>
    <string name="label_about">About Jota Text Editor</string>
    <string name="msg_init_setting">This will initialize all of the preferences.\nAre you sure?</string>
    <string name="label_direct_intent">Direct Intent</string>
    <string name="label_select_direct_intent">Select receiver</string>
    <string name="label_select_insert">Select \&quot;Insert\&quot; receiver</string>
    <string name="label_select_kind">Select a kind of intent</string>
    <string name="label_di_insert">Pick a Mushroom(Default)</string>
    <string name="label_di_share">Share</string>
    <string name="label_di_search">Search</string>
    <string name="label_di_mushroom">Mushroom</string>
    <string name="label_di_view">View</string>
    <string name="confirm_overwrite">The file already exists.\nDo you want to overwrite?</string>
    <string name="label_file">File</string>
    <string name="label_default_new_file">Default directory of new file</string>
    <string name="label_input">Input</string>
    <string name="label_shortcut_alt_left">Shortcut with Left-Alt key</string>
    <string name="label_shortcut_alt_right">Shortcut with Right-Alt key</string>
    <string name="label_shortcut_ctrl">Special Keys</string>
    <string name="label_open_last_file">Remember last file</string>
    <string name="label_open_last_file_summary">If you start Jota from Icon, automatically open the file you opend last time.</string>
    <string name="label_word_wrap">Word wrap</string>
    <string name="toast_syntax_error">Syntax error.</string>
    <string name="label_create_backup">Create backup file</string>
    <string name="summary_create_backup">Create backup file named like \&quot;filename~\&quot;</string>
    <string name="label_customize_shortcut">Customize shortcuts</string>
    <string name="label_auto_detect">Auto Detect</string>
    <string name="label_keep_original">Keep Original</string>
    <string name="label_charset_open">Char-code for open</string>
    <string name="label_charset_save">Char-code for save</string>
    <string name="label_linebreak_save">Linebreak for save</string>
    <string name="toast_opening_message">Opened the file \&quot;%3$s\&quot; as %1$s/%2$s.</string>
    <string name="toast_open_failed">Can\&apos;t open the file.</string>
    <string name="toast_saved_message">Saved the file \&quot;%1$s\&quot;.</string>
    <string name="toast_save_failed">Couldn\&apos;t save the file.</string>
    <string name="menu_file_shortcut">Create shortcut icon</string>
    <string name="label_shortcut_view">Open by default app</string>
    <string name="label_shortcut_jota">Open by Jota Text Editor</string>
    <string name="toast_overflow_of_limit">Sorry, selected text was over sized.</string>
    <string name="label_hide_titlebar">Hide Titlebar</string>
    <string name="summary_need_restart">Need restart to apply</string>
    <string name="label_hide_softkey_is01">Hide softkey area on IS01/Lynx.</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="label_viewer_mode">Viewer Mode</string>
    <string name="summary_viewer_mode">After opening a file, hide Soft Keyboard.\nNeed restart to apply</string>
    <string name="show_ime">Show IME</string>
    <string name="summary_ctrl_daz">for Dynabook AZ</string>
    <string name="summary_ctrl_ltn">for LifeTouch NOTE</string>
    <string name="label_use_volumekey">Use Volume Keys</string>
    <string name="summary_use_volumekey">Bind Volume keys(+/-) as page down/up.</string>
    <string name="label_wrapwidth_p">Wrap Width(portrait)</string>
    <string name="label_wrapwidth_l">Wrap Width(landscape)</string>
    <string name="summary_wrapwidth_p">Wrap width in Portrait mode.\nRecommended to use Monospace font.</string>
    <string name="summary_wrapwidth_l">Wrap width in Landscape mode.\nRecommended to use Monospace font.</string>
    <string name="comment_wrapwidth">Wrap width as \&quot;Index Character\&quot; x \&quot;Number\&quot;. If \&quot;Number\&quot; is set to 0 then word wraps at right edge of the screen.</string>
    <string name="label_index_character">Index Character(1 char)</string>
    <string name="label_number">Number(%1$d~%2$d)</string>
    <string name="toast_error_wrap_width">Illegal Parameter. So default is set.</string>
    <string name="enter">Enter</string>
    <string name="tab">Tab</string>
    <string name="backspace">Backspace</string>
    <string name="label_tabwidth">Tab Width</string>
    <string name="comment_tabwidth">Set tab width as \&quot;Index Character\&quot; x \&quot;Number\&quot;. </string>
    <string name="label_trackball_button">Trackball Center key</string>
    <string name="trackball_enter">Input Enter Key</string>
    <string name="trackball_centering">Centering current line</string>
    <string name="trackball_contextmenu">Show Context menu</string>
    <string name="label_open_file">Open file</string>
    <string name="label_new_file">New file</string>
    <string name="label_redo">Redo</string>
    <string name="menu_file_property">Property</string>
    <string name="result_word_count">%5$s\nCharacters %1$d\nLines %2$d\nLogical Lines %3$d\nWords %4$d</string>
    <string name="menu_edit_jump">Jump to Line</string>
    <string name="message_edit_jump">Input line number to jump</string>
    <string name="label_show_linenumbers">Show linenumbers</string>
    <string name="toast_open_via_content_provider">Opened via Content Provider. So you can\&apos;t overwrite this file.</string>
    <string name="label_auto_save">Auto Save</string>
    <string name="summary_auto_save">Overwrite automatically when closing and sleeping.</string>
    <string name="label_auto_indent">Auto Indent</string>
    <string name="label_line_space">Line Spacing</string>
    <string name="label_min_line_space">1.0</string>
    <string name="label_max_line_space">2.0</string>
    <string name="message_line_space">Set multiplier of the line.</string>
    <string name="label_clear_history">Clear History</string>
    <string name="toast_clear_history">Complete to clear history.</string>
    <string name="label_show_tab">Show Tab/Linebreak</string>
    <string name="label_action_share">Action received \&quot;Share”</string>
    <string name="summary_action_share">Define the action received \&quot;share\&quot; when Jota already opend another text.</string>
    <string name="label_action_share_insert">Insert to cursor position.</string>
    <string name="label_action_share_newfile">Close the file and open as new file.</string>
    <string name="label_miscllaneous">Misc.</string>
    <string name="cannot_connect_title">Can\&apos;t connect to Market</string>
    <string name="cannot_connect_message">This app cannot connect to Market. Your version of Market may be out of date. You can continue to use this app but you won\&apos;t be able to donate.</string>
    <string name="billing_not_supported_title">Can\&apos;t donate</string>
    <string name="label_donate">Please donate</string>
    <string name="menu_pref_search">Search Settings</string>
    <string name="menu_pref_font">Font Settings</string>
    <string name="menu_pref_view">View Settings</string>
    <string name="menu_pref_file">File Settings</string>
    <string name="menu_pref_input">Input Settings</string>
</resources>