<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="@string/menu_file"
		android:id="@+id/menu_file"
		android:icon = "@drawable/ic_menu_archive"
		android:alphabeticShortcut = "F">
    <menu>
        <item android:id="@+id/menu_file_history" 	
		android:title="@string/menu_file_history" 
		android:alphabeticShortcut = "H"
	/>
        <item android:id="@+id/menu_file_save" 		
		android:title="@string/menu_file_save" 
		android:alphabeticShortcut = "W"
	/>
        <item android:id="@+id/menu_file_saveas" 
		android:title="@string/menu_file_saveas" 
		android:alphabeticShortcut = "A"
	/>
        <item android:id="@+id/menu_file_open" 		
		android:title="@string/menu_file_open" 
		android:alphabeticShortcut = "O"
	/>
        <item android:id="@+id/menu_file_new" 		
		android:title="@string/menu_file_new"		
		android:alphabeticShortcut = "N"
	 />
        <item android:id="@+id/menu_file_view" 		
		android:title="@string/menu_file_view"		
		android:alphabeticShortcut = "U"
	 />
        <item android:id="@+id/menu_file_charcode" 
		android:title="@string/menu_file_charcode" 
	/>
        <item android:id="@+id/menu_file_lbcode" 
		android:title="@string/menu_file_lbcode" 
	/>
        <item android:id="@+id/menu_file_shortcut" 
		android:title="@string/menu_file_shortcut" 
	/>
        <item android:id="@+id/menu_file_property" 
		android:title="@string/menu_file_property" 
		android:alphabeticShortcut = "T"
	/>
        <item android:id="@+id/menu_file_quit" 
		android:title="@string/menu_file_quit" 
		android:alphabeticShortcut = "Q"
	/>
    </menu>

</item>


<item android:title="@string/menu_edit" 
		android:id="@+id/menu_edit"
		android:icon = "@drawable/ic_menu_edit"
		android:alphabeticShortcut = "E">

    <menu>
        <item android:id="@+id/menu_edit_undo" 	
		android:title="@string/menu_edit_undo" 
		android:alphabeticShortcut = "Z"
	/>
        <item android:id="@+id/menu_edit_redo" 	
		android:title="@string/label_redo" 
		android:alphabeticShortcut = "Y"
	/>
        <item android:id="@+id/menu_edit_cut" 	
		android:title="@string/cut" 
		android:alphabeticShortcut = "X"
	/>
        <item android:id="@+id/menu_edit_copy" 	
		android:title="@string/copy" 
		android:alphabeticShortcut = "C"
	/>
        <item android:id="@+id/menu_edit_paste" 
		android:title="@string/paste" 
		android:alphabeticShortcut = "V"
	/>
        <item android:id="@+id/menu_edit_jump" 	
		android:title="@string/menu_edit_jump" 
		android:alphabeticShortcut = "J"
	/>
        <item android:id="@+id/menu_search_byintent" 	
		android:title="@string/menu_search_byintent" 
		android:alphabeticShortcut = "R"
	/>
        <item android:id="@+id/menu_share" 	
		android:title="@string/menu_share" 
		android:alphabeticShortcut = "P"
	/>
    </menu>

</item>

<item android:title="@string/menu_direct"
		android:id="@+id/menu_direct"
		android:icon = "@drawable/ic_menu_direct"
		android:alphabeticShortcut = "d">

</item>

<item android:title="@string/menu_insert"
		android:id="@+id/menu_insert"
		android:icon = "@drawable/ic_menu_compose"
		android:alphabeticShortcut = "I">

</item>

<item android:title="@string/menu_search"
		android:id="@+id/menu_search"
		android:icon = "@drawable/ic_menu_search"
		android:alphabeticShortcut = "S">

</item>

<item android:title="@string/menu_preferences" 
		android:id="@+id/menu_preferences"
		android:icon = "@drawable/ic_menu_preferences"
>
    <menu>
	<item android:id="@+id/menu_pref_search"
		android:title="@string/menu_pref_search" 
	/>
	<item android:id="@+id/menu_pref_font"
		android:title="@string/menu_pref_font" 
	/>
	<item android:id="@+id/menu_pref_view"
		android:title="@string/menu_pref_view" 
	/>
	<item android:id="@+id/menu_pref_file"
		android:title="@string/menu_pref_file" 
	/>
	<item android:id="@+id/menu_pref_input"
		android:title="@string/menu_pref_input" 
	/>
	<item android:id="@+id/menu_pref_misc"
		android:title="@string/label_miscllaneous" 
	/>
	<item android:id="@+id/menu_help_donate" 		
		android:title="@string/label_donate" 
	/>
	<item android:id="@+id/menu_help_about"		
		android:title="@string/about_title" 
	/>
    </menu>

</item>

</menu>
