<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<jp.sblo.pandora.jota.text.EditText
	android:id="@+id/textedit"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="top|left"
	android:scrollbars="vertical"
	android:hint="@string/hint_message"
	android:textColorHint="#FF808080"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:clickable="true"
	android:background="@drawable/textfield_default"
	android:textAppearance="?android:attr/textAppearanceMediumInverse"
	android:textColor="#FF000000"
	android:layout_weight="1"
    />

	<LinearLayout 
	    android:id="@+id/search"
	    android:orientation="horizontal"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center_vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	>
		<EditText
		    android:id="@+id/edtSearchWord"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:focusable="true"
			android:textSize="14sp"
			android:layout_weight="1"
			android:layout_marginTop="0dip"
			android:layout_marginBottom="0dip"
		/>

		<ImageButton
		    android:id="@+id/btnForward"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_menu_forward"
			android:layout_marginTop="0dip"
			android:layout_marginBottom="0dip"
		/>
		<ImageButton
		    android:id="@+id/btnBackward"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_menu_back"
			android:layout_marginTop="0dip"
			android:layout_marginBottom="0dip"
		/>
		<CheckBox
		    android:id="@+id/chkReplace"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_replace"
			android:checked="false"
			android:layout_marginTop="0dip"
			android:layout_marginBottom="0dip"
		/>
		<ImageButton
		    android:id="@+id/btnClose"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_delete"
			android:layout_marginTop="0dip"
			android:layout_marginBottom="0dip"
		/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/replace"
	    android:orientation="horizontal"
	    android:layout_gravity="center_horizontal|center_vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	>
		<EditText
		    android:id="@+id/edtReplaceWord"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:focusable="true"
			android:textSize="14sp"
			android:layout_weight="1"
		/>

		<Button
		    android:id="@+id/btnSkip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_skip"
			android:layout_gravity="center_horizontal"
		/>
		<Button
		    android:id="@+id/btnReplaceAll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_replace_all"
			android:layout_gravity="center_horizontal"
		/>
	</LinearLayout>

</LinearLayout>
